scrollbar x horizontal/ better fixed/

--- a/CSS/menucard.css
+++ b/CSS/menucard.css
@@ -73,13 +73,21 @@
     justify-content: center;
 }
 
-.dish-catogery {
+.scrollbar-wrapper {
+    width: 98%; 
+    margin: 0 auto;
+    overflow-x: auto;
+    border-radius: 20px;
+    background: #f8eddc;
     border: 2px solid;
     background-color: antiquewhite;
+}
+
+.dish-catogery {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     gap: 10px;
-    width: 98%;
+    width: 100%;
     padding: 5px;
     border-radius: 20px;
     overflow-x: auto;
